# WebSocket

./: README.md
WebSocket/: BUILD.gn
WebSocket/gn/: BUILDCONFIG.gn  toolchain.gn
WebSocket/src/: BUILD.gn  main.cpp
WebSocket/src/cli/: cli.cpp  cli.h
WebSocket/src/tests/: cli_test.cpp  test_main.cpp  websocket_test.cpp
WebSocket/src/utils/: logger.cpp
WebSocket/src/websocket/: websocket_client.cpp  websocket_client.h
