# Build configuration for WebSocket Client

if (target_os == "") {
  target_os = host_os
}
if (target_cpu == "") {
  target_cpu = host_cpu
}

if (current_cpu == "") {
  current_cpu = target_cpu
}
if (current_os == "") {
  current_os = target_os
}

is_debug = false

# Set default toolchain
if (host_os == "win") {
  set_default_toolchain("//gn:win_toolchain")
} else {
  set_default_toolchain("//gn:gcc_toolchain")
}

# Global compiler config
config("compiler_defaults") {
  include_dirs = [ "//include" ]
  
  if (is_win) {
    cflags = [
      "/std:c++17",
      "/W3",
    ]
    if (is_debug) {
      cflags += [ "/Od", "/Zi" ]
    } else {
      cflags += [ "/O2" ]
    }
    libs = [ "ws2_32.lib" ]
  } else {
    cflags_cc = [
      "-std=c++17",
      "-Wall",
      "-Wextra",
    ]
    if (is_debug) {
      cflags_cc += [ "-g", "-O0" ]
    } else {
      cflags_cc += [ "-O2" ]
    }
    libs = [ "pthread" ]
  }
}